--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,51 @@
 .App {
-  text-align: center;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+nav {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 5px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+nav a {
+    border-right: 1px solid black;
+    padding-right: 8px;
+    padding-left: 8px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.exercise {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10%;
+    flex-direction: column;
 }
 
-.App-link {
-  color: #61dafb;
+button {
+    margin: 5px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.form {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10%;
+    margin-left: 40%;
+    margin-right: 40%;
+    flex-direction: column;
+}
+
+.form input {
+    width: 100%;
+    padding: 10px;
+    margin: 8px;
+}
+
+.form button {
+    width: 100%;
+    padding: 10px;
 }
